--- a/project/articlebase/package.json
+++ b/project/articlebase/package.json
@@ -5,6 +5,7 @@
   "description": "a Sails application",
   "keywords": [],
   "dependencies": {
+    "express": "2.5.9",
     "ejs": "2.3.4",
     "grunt": "1.0.1",
     "grunt-contrib-clean": "1.0.0",
@@ -23,6 +24,9 @@
     "sails": "~0.12.14",
     "sails-disk": "~0.10.9",
     "sails-mongo": "^0.12.2"
+  },
+  "engines": {
+    "node": "0.6.x"
   },
   "scripts": {
     "debug": "node debug app.js",
