--- a/project/articlebase/package.json
+++ b/project/articlebase/package.json
@@ -26,7 +26,7 @@
     "sails-mongo": "^0.12.2"
   },
   "engines": {
-    "node": "0.6.x"
+    "node": "9.4.0"
   },
   "scripts": {
     "debug": "node debug app.js",
